--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 			</footer>
 
 
-;mainContent.innerHTML=new_html;var saleImage=mainContent.getElementsByClassName("web-hosting-90-off-image")[0]}</script></body>
+</script></body>
 </html>
 
 
