--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		{
 		  "@context": "http://schema.org",
 		  "@type": "FinancialService",
-		  "@id": "http://www.actuarial-services.com",
+		  "@id": "https://actuarialservices.co",
 		  "name": "Dr Yash Paul Sabharwal, Consulting Actuary",
 		  "address": {
 		    "@type": "PostalAddress",
@@ -40,7 +40,7 @@
 		    "latitude": 28.668791, 
 		    "longitude": 77.205637
 		  },
-		  "url": "http://www.actuarial-services.com",
+		  "url": "https://actuarialservices.co",
 		  "telephone": "+911123821119",
 		  "email":"ypsabharwal@yahoo.com"
 		}
