--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<li class="dropbtn" style="font-weight:500;">Search
 							<div class="dropdown-content" style="font-weight:300;height:35px; width:340px">
 								<form action="http://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
-									<input name="sitesearch" type="hidden" value="www.actuarial-services.com" >
+									<input name="sitesearch" type="hidden" value="actuarialservices.co" >
 									<input autocomplete="on" class="form-controls search " name="q" placeholder="&#128269;" required="required"  type="text"  style="align:centre;background:#ffffff; height:35px;">
 								</form>
 							</div>
