--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 						</p>
 
 						<ul class="actions">
-						<li><a href="http://www.beanactuary.org" class="button alt">More on BeAnActuary.com -></a></li>
+						<li><a href="http://www.beanactuary.org"  target="_PARENT" class="button alt">More on BeAnActuary.com -></a></li>
 						</ul>
 					</section>
 					<hr />
@@ -346,10 +346,10 @@
 					<section>
 						<h3>Other Links</h3>
 						<ul class="alt">
-							<li><a href="http://www.actuariesindia.org/">Institute of Actuaries of India</a></li>
-							<li><a href="https://www.actuaries.org.uk/">Institute and Faculty of Actuaries, UK</a></li>
-							<li><a href="http://www.mca.gov.in/MinistryV2/Stand.html">Accounting Standards, MCA</a></li>
-							<li><a href="https://www.actuariesindia.org/regulation/Actuaries%20Act%202006.pdf">The Actuary Act, 2006</a></li>
+							<li><a href="http://www.actuariesindia.org/" target="_PARENT">Institute of Actuaries of India</a></li>
+							<li><a href="https://www.actuaries.org.uk/" target="_PARENT">Institute and Faculty of Actuaries, UK</a></li>
+							<li><a href="http://www.mca.gov.in/MinistryV2/Stand.html" target="_PARENT">Accounting Standards, MCA</a></li>
+							<li><a href="https://www.actuariesindia.org/regulation/Actuaries%20Act%202006.pdf" target="_PARENT">The Actuary Act, 2006</a></li>
 						</ul>
 					</section>
 				</div>
@@ -415,7 +415,7 @@
 							<br>
 							<br>
 							<ul class="icons">
-								<li><a href="https://twitter.com/ACTUARYSERVICES" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/ACTUARYSERVICES"  target="_PARENT" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
