--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		    "longitude": 77.205637
 		  },
 		  "url": "https://actuarialservices.co",
-		  "telephone": "+911123821119",
+		  "telephone": "+919818285042",
 		  "email":"ypsabharwal@yahoo.com"
 		}
 		</script>
@@ -73,7 +73,7 @@
 					text-shadow    : 1px 1px #ffffff;">
 
 
-				<a href=# >ACTUARIAL SERVICES / +91-11-23821119</a></h4>
+				<a href=# >ACTUARIAL SERVICES /  +91-9818285042</a></h4>
 			</div>
 
 			<nav id="nav">
@@ -409,7 +409,7 @@
 							<h3>Contact us at:</h3>
 							<p>&nbsp;&nbsp; &#9993;  &nbsp;&nbsp;           <a href="mailto:ypsabharwal@yahoo.com">ypsabharwal@yahoo.com</a></p>
 
-							<p>&nbsp;       &#9743;  &nbsp;                  +91-11-23821119, +91-11-23823293<br>
+							<p>&nbsp;       &#9743;  &nbsp;                                                  <br>
 							   &nbsp;&nbsp; &#128241;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-9818285042</p>
 							<br>
 							<br>
