--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						</li>
 					</div>
 					<li><a href="#AboutUs" style="font-weight:500;">About Us</a></li>
-					<li><a href="#Contact" style="font-weight:500;">Contact Us</a></li>
+					<li><a href="#Contact" style="font-weight:500;"></a></li>
 				<li></li>
 	
 				</ul>
@@ -409,7 +409,7 @@
 							<h3>Contact us at:</h3>
 							<p>&nbsp;&nbsp; &#9993;  &nbsp;&nbsp;           <a href="mailto:ypsabharwal@yahoo.com">ypsabharwal@yahoo.com</a></p>
 
-							<p>&nbsp;       &#9743;  &nbsp;                                                  <br>
+							<p>
 							   &nbsp;&nbsp; &#128241;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-9818285042</p>
 							<br>
 							<br>
