--- a/index.html
+++ b/index.html
@@ -409,8 +409,7 @@
 							<h3>Contact us at:</h3>
 							<p>&nbsp;&nbsp; &#9993;  &nbsp;&nbsp;           <a href="mailto:ypsabharwal@yahoo.com">ypsabharwal@yahoo.com</a></p>
 
-							<p>
-							   &nbsp;&nbsp; &#128241;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-9818285042</p>
+							<p>&nbsp;&nbsp; &#128241;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-9818285042</p>
 							<br>
 							<br>
 							<br>
