--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					<section class="special box"  style="background: #eeeeee;opacity: 0.95;">
 						<h3 style="position: relative;top: -35px;text-shadow: 1px 1px #111111;">General Insurance</h3>	
 						<!--<i class="icon fa-taxi major"></i>-->
-						<p style="position: relative;color:#000000;" align="justify">We provide consultancy regarding reserving and pricing of General Insurance products <br><br> </p>						
+						<p style="position: relative;color:#000000;" align="justify">We provide consultancy regarding reserving and pricing of General Insurance products <br><br><br></p>						
 						<p><a href="#elements" class="button big alt" style=" color:#222222;text-shadow: 1px 1px #111111;background:#aaaaaa;">Learn More</a></p>							
 					</section>
 				</div>
