--- a/EmployeeBenefitValuations.html
+++ b/EmployeeBenefitValuations.html
@@ -245,8 +245,7 @@ Both of them need to be provisioned for. And thus Actuarial valuations is needed
 							<h3>Contact us at:</h3>
 							<p>&nbsp;&nbsp; &#9993;  &nbsp;&nbsp;           <a href="mailto:ypsabharwal@yahoo.com">ypsabharwal@yahoo.com</a></p>
 
-							<p>&nbsp;       &#9743;  &nbsp;                  +91-11-23821119, +91-11-23823293<br>
-							   &nbsp;&nbsp; &#128241;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-9818285042</p>
+							<p>&nbsp;&nbsp; &#128241;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-9818285042</p>
 							<br>
 							<br>
 							<br>
