--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 					<section class="special box"  style="background: #eeeeee;opacity: 0.95;">
 						<h3 style="position: relative;top: -35px;text-shadow: 1px 1px #111111;">Warranty Liabilities</h3>								
 						<!--<i class="icon  fa-shopping-cart major"></i>-->				
-						<p style="position: relative;color:#000000;" align="justify">Provision for liablities arising out of promised warranties on products or services is mandated under accounting standard Ind-AS(37). Use our services for exploratory valuations or to be compliant with the requisite Accounting standard</p>	
+						<p style="position: relative;color:#000000;" align="justify">Provision for liablities arising out of promised warranties on products or services is mandated under accounting standard Ind-AS(37). Use our services for exploratory valuations or to be compliant with the requisite Accounting standard<br></p>	
 						<p><a href="#elements" class="button big alt" style=" color:#222222;text-shadow: 1px 1px #111111;background:#aaaaaa;">Learn More</a></p>							
 					</section>
 				</div>
